refactored build files (fails)